# etoropy

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/commands/: finish.md  flow-status.md  hotfix.md  release.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: architecture.rst  changelog.rst  conf.py  examples.rst  index.rst  quickstart.rst
docs/api/: client.rst  config.rst  errors.rst  http.rst  index.rst  models.rst  rest.rst  websocket.rst
etoropy/: __init__.py  _utils.py
etoropy/config/: __init__.py  constants.py  settings.py
etoropy/errors/: __init__.py  exceptions.py
etoropy/http/: __init__.py  client.py  rate_limiter.py  retry.py
etoropy/models/: __init__.py  common.py  enums.py  feeds.py  market_data.py  trading.py  websocket.py
etoropy/rest/: __init__.py  _base.py  discovery.py  feeds.py  market_data.py  pi_data.py  reactions.py  rest_client.py  trading_execution.py  trading_info.py  users_info.py  watchlists.py
etoropy/trading/: __init__.py  client.py  instrument_resolver.py
etoropy/ws/: __init__.py  client.py  message_parser.py  subscription.py
examples/: algo_bot_skeleton.py  basic_usage.py  stream_prices.py
notebooks/: demobot.ipynb  gitkeep.ipynb
tests/: conftest.py
tests/integration/: conftest.py  test_discovery.py  test_feeds.py  test_high_level_client.py  test_market_data.py  test_pi_data.py  test_trading_info.py  test_users_info.py  test_watchlists.py
tests/unit/: test_config.py  test_enums.py  test_errors.py  test_instrument_resolver.py  test_models.py  test_rate_limiter.py  test_retry.py  test_subscription.py  test_utils.py  test_ws_client.py  test_ws_message_parser.py
