[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etoropy"
version = "0.1.4"
authors = [
    { name="Massimo Gollo", email="dev@massimogollo.cloud" },
]
maintainers = [
    { name="Massimo Gollo", email="dev@massimogollo.cloud" },
]
description = "Unofficial Python SDK for the eToro Public API — algo trading, market data, WebSocket streaming"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["etoro", "trading", "api", "sdk", "algo-trading", "market-data", "websocket", "stocks", "crypto", "portfolio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.22",
]
docs = [
    "sphinx>=8.0",
    "furo",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "autodoc-pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["etoropy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that call the real eToro API (requires ETORO_API_KEY / ETORO_USER_KEY)",
]
addopts = "-m 'not integration'"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
